fix code block align-with right problem office-Win7

--- a/source/css/highlight.styl
+++ b/source/css/highlight.styl
@@ -75,7 +75,7 @@ figure.highlight,.codeblock
   .line
     font-size: 13px
     color: #cccccc
-    text-align: right
+    text-align: left
     &.marked
       background: #f5e3de
 
